# CanLearnML

./: .gitignore  README.md  pyproject.toml
.junie/: guidelines.md
CanLearnML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Module 1 - Python-NumPy Foundations/: 01_python_numpy_foundations.ipynb
Module 2 - Mathematical Foundations/: 01_mathematical_foundations.ipynb
Module 3 - From Manual to Automatic/: 01_manual_to_automatic.ipynb
Module 4 - PyTorch Fundamentals/: 01_pytorch_fundamentals.ipynb
